Trying to fix issue with email.
Trying to fix the color as it goes invisible after its clicked.

--- a/css/styles.css
+++ b/css/styles.css
@@ -169,11 +169,11 @@ a:hover {
 }
 
 a:not([href]) {
-  color: inherit;
+  color: #117964;
   text-decoration: none;
 }
 a:not([href]):hover {
-  color: inherit;
+  color: #117964;
   text-decoration: none;
 }
 
